@@ -92,10 +92,16 @@
 			<RegExp input="$INFO[genressource]" output="&lt;chain function=&quot;GetTRAKTTVGenresByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
 				<expression>trakt.tv</expression>
 			</RegExp>
-			<RegExp input="$$1" output="&lt;country&gt;\1&lt;/country&gt;" dest="5+">
+			<RegExp input="$$1" output="\1" dest="7">
+				<expression clear="yes" noclean="1">&quot;production_countries&quot;:\[([^\]]*)</expression>
+			</RegExp>
+			<RegExp input="$$7" output="&lt;country&gt;\1&lt;/country&gt;" dest="5+">
 				<expression trim="1" fixchars="1">&quot;name&quot;:&quot;([^&quot;]*)</expression>
 			</RegExp>
-			<RegExp input="$$1" output="&lt;studio&gt;\1&lt;/studio&gt;" dest="5+">
+			<RegExp input="$$1" output="\1" dest="7">
+				<expression clear="yes" noclean="1">&quot;production_companies&quot;:\[([^\]]*)</expression>
+			</RegExp>
+			<RegExp input="$$7" output="&lt;studio&gt;\1&lt;/studio&gt;" dest="5+">
 				<expression trim="1" fixchars="1">&quot;name&quot;:&quot;([^&quot;]*)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;outline&gt;\1&lt;/outline&gt;&lt;plot&gt;\1&lt;/plot&gt;" dest="5+">
