@@ -1,3 +1,6 @@
+[B]1.8.1[/B]
+- fixed: studio and country won't scrape
+
 [B]1.8.0[/B]
 - changed: switch to TMDb search engine
 
